--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
         <nav>
             <ul class="menu">
-                <li><a class="home-menu" href ="./backup.html">Home</a></li>
+                <li><a class="home-menu" href ="#">Home</a></li>
                 <li><a href ="#">Detalhes</a></li>
 
             </ul>
